Bug 164002 - Hovering over a slotted Text node clears hover state
Summary: Hovering over a slotted Text node clears hover state
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: Safari 10
Hardware: Unspecified Unspecified
: P2 Major
Assignee: Ryosuke Niwa
URL: http://codepen.io/mcorbanini/pen/RGdzAB
Keywords: InRadar
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2016-10-25 18:44 PDT by Matias
Modified: 2016-11-11 16:51 PST (History)
7 users (show)

See Also:


Attachments
Fixes the bug (18.56 KB, patch)
2016-11-10 16:29 PST, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Fixes the bug (19.48 KB, patch)
2016-11-10 16:32 PST, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Patch for landing (18.27 KB, patch)
2016-11-11 16:16 PST, Ryosuke Niwa
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Matias 2016-10-25 18:44:18 PDT
* SUMMARY
Apparently, there is a misbehavior with slotted elements when these ones are clicked or hovered. Active state and hover state are not being applied.

* HOW TO REPRODUCE
Opening this example will be clear enough http://codepen.io/mcorbanini/pen/RGdzAB
Comment 1 Radar WebKit Bug Importer 2016-11-01 00:47:51 PDT
<rdar://problem/29040471>
Comment 2 Ryosuke Niwa 2016-11-10 16:29:59 PST
Created attachment 294438 [details]
Fixes the bug
Comment 3 WebKit Commit Bot 2016-11-10 16:32:34 PST
Attachment 294438 [details] did not pass style-queue:


ERROR: Source/WebKit/mac/WebView/WebImmediateActionController.mm:153:  The parameter name "element" adds no information, so it should be removed.  [readability/parameter_name] [5]
Total errors found: 1 in 16 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 4 Ryosuke Niwa 2016-11-10 16:32:45 PST
Created attachment 294439 [details]
Fixes the bug
Comment 5 WebKit Commit Bot 2016-11-10 16:35:35 PST
Attachment 294439 [details] did not pass style-queue:


ERROR: Source/WebKit/mac/WebView/WebImmediateActionController.mm:153:  The parameter name "element" adds no information, so it should be removed.  [readability/parameter_name] [5]
Total errors found: 1 in 17 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 6 Ryosuke Niwa 2016-11-11 13:12:57 PST
Ping reviewers.
Comment 7 Simon Fraser (smfr) 2016-11-11 13:37:36 PST
Comment on attachment 294439 [details]
Fixes the bug

View in context: https://bugs.webkit.org/attachment.cgi?id=294439&action=review

> Source/WebCore/ChangeLog:3
> +        Moving the cursor onto a slotted Text node clears hover state

What kind of cursor? This makes me think of the mouse cursor but I don't think you mean that.
EDIT: oh I guess you do. Maybe reword to use "hover".
Comment 8 Ryosuke Niwa 2016-11-11 16:15:55 PST
(In reply to comment #7)
> Comment on attachment 294439 [details]
> Fixes the bug
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=294439&action=review
> 
> > Source/WebCore/ChangeLog:3
> > +        Moving the cursor onto a slotted Text node clears hover state
> 
> What kind of cursor? This makes me think of the mouse cursor but I don't
> think you mean that.
> EDIT: oh I guess you do. Maybe reword to use "hover".

Thanks for the review. Fixe the bug title.
Comment 9 Ryosuke Niwa 2016-11-11 16:16:39 PST
Created attachment 294560 [details]
Patch for landing
Comment 10 WebKit Commit Bot 2016-11-11 16:18:37 PST
Attachment 294560 [details] did not pass style-queue:


ERROR: Source/WebKit/mac/WebView/WebImmediateActionController.mm:153:  The parameter name "element" adds no information, so it should be removed.  [readability/parameter_name] [5]
Total errors found: 1 in 17 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 11 WebKit Commit Bot 2016-11-11 16:51:53 PST
Comment on attachment 294560 [details]
Patch for landing

Clearing flags on attachment: 294560

Committed r208630: <http://trac.webkit.org/changeset/208630>
Comment 12 WebKit Commit Bot 2016-11-11 16:51:59 PST
All reviewed patches have been landed.  Closing bug.